--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "description": "Backend/API REST para projeto do curso MERN",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Pedro Mack Navarro",
   "license": "MIT",
@@ -17,5 +18,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "engines": {
+    "node": "10.x"
+  } 
 }
