--- a/back/package.json
+++ b/back/package.json
@@ -1,11 +1,15 @@
 {
   "name": "backend",
+  "homepage": "https://PeNavarro.github.io/RotaCervejeira",
   "version": "1.0.0",
   "description": "Backend/API REST para projeto do curso MERN",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build"
+
   },
   "author": "Pedro Mack Navarro",
   "license": "MIT",
